<resources>
    <string name="app_name">我的作品集</string>
    <string name="title">纳米学位应用</string>
    <string name="app_movies">热门电影</string>
    <string name="app_shares">股票雄鹰</string>
    <string name="app_reader">XYZ阅读器</string>
    <string name="app_news">最新闻</string>
    <string name="app_graduation_design">毕业设计</string>
    <string name="no_app">打开的app不存在</string>
    <string name="open_app">启动应用：</string>
</resources>
